src/test/deca/context/invalid/classmethode17.deca
class A {
    int methode(int k,boolean n) {
        int a=n;   
	}
}


